# weather-chatbot

./: .gitignore  README.md  app.py  pyproject.toml
data/: La_Habana_weather_data.csv
src/: config.py  process_csv.py
